--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "body-parser": "^1.20.0",
     "ejs": "^3.1.7",
