--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
   },
   "dependencies": {
     "body-parser": "^1.20.0",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.7",
     "express": "^4.17.3",
+    "express-session": "^1.17.3",
+    "firebase": "^9.8.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.3.1",
-    "nodemon": "^2.0.15"
+    "mongoose-findorcreate": "^3.0.0",
+    "nodemon": "^2.0.15",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local-mongoose": "^7.1.2"
   },
-  "devDependencies": {},
+  "keywords": [],
   "description": ""
 }
